--- a/src/blocks/form/__input-error/form__input-error.css
+++ b/src/blocks/form/__input-error/form__input-error.css
@@ -1,6 +1,6 @@
 .form__input-error {
   display: block;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -9,6 +9,11 @@
   transition: opacity 0.3s ease-in-out;
   position: absolute;
   margin-top: 5px;
+  max-height: 30px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .form__input-error_active {
