--- a/src/blocks/form/__text-field/form__text-field.css
+++ b/src/blocks/form/__text-field/form__text-field.css
@@ -8,7 +8,7 @@
   padding-left: 4px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -18,4 +18,16 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 100%;
+  background-color: transparent;
+}
+
+.form__text-field:focus-visible,
+.form__text-field:focus {
+  outline: none;
+}
+
+.form__input-field_variant_dark .form__text-field {
+  color: var(--primary-color-light);
+  position: relative;
+  border-bottom: 2px solid #ccc;
 }
