--- a/src/blocks/form/__input-field/form__input-field.css
+++ b/src/blocks/form/__input-field/form__input-field.css
@@ -8,3 +8,19 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+/* 
+.form__input-field_variant_dark::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: tomato;
+  bottom: 0;
+  left: 0;
+  transform: scale(0);
+} */
+
+/* .form__text-field:focus-visible .form__input-field_variant_dark::after,
+.form__text-field:focus ~ .form__input-field_variant_dark::after {
+  transform: scale(1);
+} */
