--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -8,6 +8,25 @@
   background-color: var(--background-color-dark);
 }
 
+.page__title {
+  margin: 0;
+  margin-bottom: 40px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 24px;
+
+  color: var(--primary-color-light);
+}
+
 .page_no-overflow {
   overflow-y: scroll;
+}
+
+@media screen and (min-width: 768px) {
+  .page__title {
+    font-size: 24px;
+    line-height: 29px;
+  }
 }
