--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -4,5 +4,5 @@
   --primary-color-dark: #000;
   --primary-color-light: #fff;
   --secondary-color: #545454;
-  --accent-color: #ff0000;
+  --accent-color: red;
 }
