--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,15 @@
 
 @import './blocks/page/page.css';
 
+@import './blocks/link/link.css';
+
 @import './blocks/button/button.css';
 @import './blocks/button/_type/button_type_edit.css';
 @import './blocks/button/_type/button_type_add.css';
 @import './blocks/button/_type/button_type_save.css';
 @import './blocks/button/_type/button_type_close.css';
 @import './blocks/button/_type/button_type_like.css';
+@import './blocks/button/_type/button_type_basic.css';
 
 @import './blocks/header/header.css';
 @import './blocks/header/__logo/header__logo.css';
@@ -17,11 +20,17 @@
 @import './blocks/container/container.css';
 @import './blocks/main/main.css';
 
+@import './blocks/login/login.css';
+@import './blocks/login/__message/login__message.css';
+@import './blocks/login/__form/login__form.css';
+@import './blocks/login/__title/login__title.css';
+
 @import './blocks/profile/profile.css';
 @import './blocks/profile-info/profile-info.css';
 @import './blocks/profile-info/__inner/profile-info__inner.css';
 @import './blocks/profile-info/__name/profile-info__name.css';
 @import './blocks/profile-info/__about/profile-info__about.css';
+@import './blocks/profile-info/__email/profile-info__email.css';
 @import './blocks/avatar/avatar.css';
 @import './blocks/avatar/__image/avatar__image.css';
 @import './blocks/avatar/__edit/avatar__edit.css';
@@ -43,7 +52,7 @@
 @import './blocks/footer/__title/footer__title.css';
 
 @import './blocks/popup/popup.css';
-@import './blocks//popup//__overlay/popup__overlay.css';
+@import './blocks//popup/__overlay/popup__overlay.css';
 @import './blocks/popup/__container/popup__container.css';
 @import './blocks/popup/_opened/popup_opened.css';
 @import './blocks/popup/__title/popup__title.css';
@@ -54,3 +63,7 @@
 @import './blocks/form/__input-error/form__input-error.css';
 @import './blocks/form/__text-field/_type/form__text-field_type_error.css';
 @import './blocks/form/__inner/form__inner.css';
+
+@import './blocks/infotooltip/infotooltip.css';
+@import './blocks/infotooltip/__image/infotooltip__image.css';
+@import './blocks/infotooltip/__text/infotooltip__text.css';
